Fix input styling on ios

--- a/public/common.css
+++ b/public/common.css
@@ -37,10 +37,12 @@ input,
 textarea {
   background: rgba(255, 255, 255, 0.9);
   border: 0.1rem solid rgba(255, 255, 255, 0.25);
+  border-radius: none;
   box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.5) inset;
   color: var(--color-Secondary);
   padding: 0.75em;
   width: 100%;
+  -webkit-appearance: none;
 }
 
 input:focus,
